# python-cookie-cutter

./: LICENSE.txt  README.md  prepare.sh  pyproject.toml
cookie_cutter/: __about__.py  __init__.py
cookie_cutter/cli/: cli.py
cookie_cutter/cli/commands/: version.py
cookiecutter/cli/: cli.py
cookiecutter/cli/commands/: version.py
